--- a/연습/nodejs prc/package.json
+++ b/연습/nodejs prc/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon 19_jade2.js"
+    "start": "nodemon 20_nodemailer.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.7",
     "express": "^4.17.3",
-    "jade": "^1.11.0"
+    "jade": "^1.11.0",
+    "nodemailer": "^6.7.4"
   }
 }
