220503 node.js 연습, nodeMailer, smtp 써서 form 형태로 메일보내기

--- a/연습/nodejs prc/package.json
+++ b/연습/nodejs prc/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon 20_nodemailer.js"
+    "start": "nodemon 21_nodemailer1.js"
   },
   "author": "",
   "license": "ISC",
