--- a/연습/nodejs prc/package.json
+++ b/연습/nodejs prc/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon 21_nodemailer1.js"
+    "start": "nodemon 22_module.js"
   },
   "author": "",
   "license": "ISC",
