--- a/연습/nodejs prc/package.json
+++ b/연습/nodejs prc/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon 22_module.js"
+    "start": "nodemon 23_cookie1.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.7",
     "express": "^4.17.3",
     "jade": "^1.11.0",
