--- a/연습/nodejs prc/package.json
+++ b/연습/nodejs prc/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon 24_cookie2.js"
+    "start": "nodemon 25_session.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +12,7 @@
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.7",
     "express": "^4.17.3",
+    "express-session": "^1.17.3",
     "jade": "^1.11.0",
     "nodemailer": "^6.7.4"
   }
