--- a/연습/nodejs prc/package.json
+++ b/연습/nodejs prc/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.3",
     "express-session": "^1.17.3",
     "jade": "^1.11.0",
+    "mongodb": "^4.6.0",
     "nodemailer": "^6.7.4"
   }
 }
