--- a/연습/nodejs prc/package.json
+++ b/연습/nodejs prc/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon 29_mongoose1.js"
+    "start": "nodemon 30_passport1.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,7 @@
     "mongoose": "^6.3.6",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.7.4"
+    "nodemailer": "^6.7.4",
+    "passport": "^0.6.0"
   }
 }
