--- a/연습/nodejs prc/package.json
+++ b/연습/nodejs prc/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "cookie-parser": "^1.4.6",
+    "crypto": "^1.0.1",
     "ejs": "^3.1.7",
     "express": "^4.17.3",
     "express-error-handler": "^1.1.0",
