--- a/Practice/react prc/react webgame/3.numberBaseball/package.json
+++ b/Practice/react prc/react webgame/3.numberBaseball/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack serve --env development"
+    "build": "webpack",
+    "dev": "webpack serve --env  development --open"
   },
   "author": "Silku",
   "license": "MIT",
@@ -16,11 +17,11 @@
     "@babel/core": "^7.19.3",
     "@babel/preset-env": "^7.19.4",
     "@babel/preset-react": "^7.18.6",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.8",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.1",
     "babel-loader": "^8.2.5",
-    "react-refresh": "^0.14.0",
+    "react-refresh": "^0.10.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1"
+    "webpack-dev-server": "^4.3.1"
   }
 }
