--- a/Practice/react prc/nextRedux/front/package.json
+++ b/Practice/react prc/nextRedux/front/package.json
@@ -9,9 +9,18 @@
 	"author": "Silku",
 	"license": "ISC",
 	"dependencies": {
+		"@ant-design/icons": "^4.8.0",
+		"antd": "^5.0.3",
 		"next": "^12.3.4",
 		"prop-types": "^15.8.1",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"styled-components": "^5.3.6"
+	},
+	"devDependencies": {
+		"eslint": "^8.28.0",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-react": "^7.31.11",
+		"eslint-plugin-react-hooks": "^4.6.0"
 	}
 }
