--- a/Practice/react prc/nextRedux/front/package.json
+++ b/Practice/react prc/nextRedux/front/package.json
@@ -12,9 +12,12 @@
 		"@ant-design/icons": "^4.8.0",
 		"antd": "^5.0.3",
 		"next": "^12.3.4",
+		"next-redux-wrapper": "^8.0.0",
 		"prop-types": "^15.8.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-redux": "^8.0.5",
+		"redux": "^4.2.0",
 		"styled-components": "^5.3.6"
 	},
 	"devDependencies": {
