--- a/Practice/react prc/nextRedux/front/package.json
+++ b/Practice/react prc/nextRedux/front/package.json
@@ -9,6 +9,7 @@
 	"author": "Silku",
 	"license": "ISC",
 	"dependencies": {
+		"@ant-design/compatible": "^5.1.1",
 		"@ant-design/icons": "^4.8.0",
 		"antd": "^5.0.3",
 		"next": "^12.3.4",
@@ -17,6 +18,7 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-redux": "^8.0.5",
+		"react-slick": "^0.29.0",
 		"redux": "^4.2.0",
 		"styled-components": "^5.3.6"
 	},
