--- a/Practice/react prc/nextRedux/front/package.json
+++ b/Practice/react prc/nextRedux/front/package.json
@@ -20,6 +20,7 @@
 		"react-redux": "^8.0.5",
 		"react-slick": "^0.29.0",
 		"redux": "^4.2.0",
+		"redux-thunk": "^2.4.2",
 		"styled-components": "^5.3.6"
 	},
 	"devDependencies": {
