--- a/Practice/react prc/nextRedux/front/package.json
+++ b/Practice/react prc/nextRedux/front/package.json
@@ -12,6 +12,7 @@
 		"@ant-design/compatible": "^5.1.1",
 		"@ant-design/icons": "^4.8.0",
 		"antd": "^5.0.3",
+		"axios": "^1.2.1",
 		"next": "^12.3.4",
 		"next-redux-wrapper": "^8.0.0",
 		"prop-types": "^15.8.1",
@@ -20,7 +21,7 @@
 		"react-redux": "^8.0.5",
 		"react-slick": "^0.29.0",
 		"redux": "^4.2.0",
-		"redux-thunk": "^2.4.2",
+		"redux-saga": "^1.2.2",
 		"styled-components": "^5.3.6"
 	},
 	"devDependencies": {
