--- a/Practice/react prc/nextRedux/.eslintrc
+++ b/Practice/react prc/nextRedux/.eslintrc
@@ -12,8 +12,7 @@
         "es6": true
     },
     "extends" :[
-        "eslint:recommended",
-        "plugin:react/recommended"
+        "airbnb"
     ],
     "plugins": [
         "import",
