--- a/Practice/react prc/nextRedux/front/package.json
+++ b/Practice/react prc/nextRedux/front/package.json
@@ -4,7 +4,8 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"dev": "next -p 8080"
+		"dev": "next -p 8080",
+		"build": "next build"
 	},
 	"author": "Silku",
 	"license": "ISC",
@@ -14,19 +15,22 @@
 		"antd": "^5.0.3",
 		"axios": "^1.2.1",
 		"next": "^12.3.4",
-		"next-redux-wrapper": "^8.0.0",
+		"next-redux-wrapper": "^6.0.2",
 		"prop-types": "^15.8.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-redux": "^8.0.5",
 		"react-slick": "^0.29.0",
 		"redux": "^4.2.0",
-		"redux-saga": "^1.2.2",
+		"redux-saga": "^1.1.3",
 		"styled-components": "^5.3.6"
 	},
 	"devDependencies": {
+		"babel-eslint": "^10.1.0",
 		"eslint": "^8.28.0",
+		"eslint-config-airbnb": "^19.0.4",
 		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-jsx-a11y": "^6.6.1",
 		"eslint-plugin-react": "^7.31.11",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"redux-devtools-extension": "^2.13.9"
