--- a/Practice/react prc/nextRedux/front/package.json
+++ b/Practice/react prc/nextRedux/front/package.json
@@ -23,6 +23,7 @@
 		"react-slick": "^0.29.0",
 		"redux": "^4.2.0",
 		"redux-saga": "^1.1.3",
+		"shortid": "^2.2.16",
 		"styled-components": "^5.3.6"
 	},
 	"devDependencies": {
