--- a/Practice/react prc/nextRedux/front/package.json
+++ b/Practice/react prc/nextRedux/front/package.json
@@ -14,6 +14,7 @@
 		"@ant-design/icons": "^4.8.0",
 		"antd": "^5.0.3",
 		"axios": "^1.2.1",
+		"immer": "^9.0.16",
 		"next": "^12.3.4",
 		"next-redux-wrapper": "^6.0.2",
 		"prop-types": "^15.8.1",
@@ -27,6 +28,7 @@
 		"styled-components": "^5.3.6"
 	},
 	"devDependencies": {
+		"@faker-js/faker": "^5.5.3",
 		"babel-eslint": "^10.1.0",
 		"eslint": "^8.28.0",
 		"eslint-config-airbnb": "^19.0.4",
