--- a/Practice/react prc/nextRedux/back/package.json
+++ b/Practice/react prc/nextRedux/back/package.json
@@ -5,12 +5,15 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : "app.js"
+    "dev": "app.js"
   },
   "author": "Silku",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "nodemon": "^2.0.20"
+    "mysql2": "^2.3.3",
+    "nodemon": "^2.0.20",
+    "sequelize": "^6.27.0",
+    "sequelize-cli": "^6.5.2"
   }
 }
