--- a/Practice/react prc/nextRedux/back/package.json
+++ b/Practice/react prc/nextRedux/back/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "app.js"
+    "dev": "nodemon app"
   },
   "author": "Silku",
   "license": "ISC",
@@ -13,7 +13,7 @@
     "express": "^4.18.2",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
-    "sequelize": "^6.27.0",
-    "sequelize-cli": "^6.5.2"
+    "sequelize": "^5.22.5",
+    "sequelize-cli": "^5.5.1"
   }
 }
