--- a/Practice/react prc/nextRedux/front/package.json
+++ b/Practice/react prc/nextRedux/front/package.json
@@ -25,7 +25,8 @@
 		"redux": "^4.2.0",
 		"redux-saga": "^1.1.3",
 		"shortid": "^2.2.16",
-		"styled-components": "^5.3.6"
+		"styled-components": "^5.3.6",
+		"swr": "^2.0.0"
 	},
 	"devDependencies": {
 		"@faker-js/faker": "^5.5.3",
