--- a/Practice/react prc/nextRedux/front/package.json
+++ b/Practice/react prc/nextRedux/front/package.json
@@ -15,6 +15,7 @@
 		"antd": "^5.0.3",
 		"axios": "^1.2.1",
 		"immer": "^9.0.16",
+		"moment": "^2.29.4",
 		"next": "^12.3.4",
 		"next-redux-wrapper": "^6.0.2",
 		"prop-types": "^15.8.1",
