--- a/Practice/react prc/nextRedux/front/.eslintrc
+++ b/Practice/react prc/nextRedux/front/.eslintrc
@@ -1,11 +1,13 @@
 {
     "parser": "@babel/eslint-parser",
+    "babelOptions": { "configFile": "./.babelrc"},
     "parserOptions": {
         "ecmaVersion": 2020,
         "sourceType": "module",
         "ecmaFeatures": {
             "jsx": true
-        }
+        },
+        "requireConfigFile" : "false"
     },
     "env":{
         "browser": true,
@@ -32,5 +34,4 @@
         "linebreak-style": "off",
         "no-param-reassign": "off"
     }
-
 }
